--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link
-      rel="shortcut icon"
-      href="../src/images/griffin.jpg"
-      type="image/x-icon"
-    />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -16,7 +12,7 @@
     
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
    
-    <title>React App</title>
+    <title>Calvin Griffin</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
