--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,8 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <meta property="og:image" content=”%PUBLIC_URL%/Olympic.jpg” />
-    <link rel="manifest" href="../src/images/smile.png" />
+    <meta property="og:image" content=”../src/images/smile.png” />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
    
     <title>Calvin Griffin</title>
   </head>
