added mete image

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <meta property="og:image" content=”https://avatars1.githubusercontent.com/u/68067658?s=400&u=a77687b30aa5226067abdcb8401cb75847b2f10e&v=4” />
+    <meta property="og:image" content=”../src/images/smile.png” />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
    
     <title>Calvin Griffin</title>
