added mete image

--- a/public/index.html
+++ b/public/index.html
@@ -9,14 +9,25 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <meta property="og:image" content=”../src/images/smile.png” />
+    <meta property="og:title" content="Calvin Griffin Portfolio" />
+    <meta
+      property="og:description"
+      content="View my web development portfolio and contact information"
+    />
+    <meta
+      property="og:image"
+      content="../src/images/smile.png"
+    />
+    <meta
+      property="og:url"
+      content="http://cgriffin332.github.io/portfolio-react"
+    />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-   
+
     <title>Calvin Griffin</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-   
   </body>
 </html>
