added mete image

--- a/public/index.html
+++ b/public/index.html
@@ -9,19 +9,13 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <meta property="og:title" content="Calvin Griffin Portfolio" />
+    <meta name="title" content="Calvin Griffin Portfolio" />
     <meta
-      property="og:description"
+      name="description"
       content="View my web development portfolio and contact information"
     />
-    <meta
-      property="og:image"
-      content="../src/images/smile.png"
-    />
-    <meta
-      property="og:url"
-      content="http://cgriffin332.github.io/portfolio-react"
-    />
+    <meta name="image" content="../src/images/smile.png" />
+    <meta name="url" content="http://cgriffin332.github.io/portfolio-react" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <title>Calvin Griffin</title>
